test/classes/vass/ref-like-intents/inout-superclass.good
inout-superclass.chpl:13: error: unresolved call 'procInoutD(C)'
inout-superclass.chpl:6: note: candidates are: procInoutD(inout arg: D)
